# BSLab

bs-uebung-template-v0.43/: CMakeLists.txt  Makefile  mkfs.myfs  mount.myfs
bs-uebung-template-v0.43/includes/: dmap.h
bs-uebung-template-v0.43/src/: dmap.cpp
bs-uebung-template-v0.5/: .gitignore  CMakeLists.txt  Makefile  mkfs.myfs  mount.myfs  test.sh
bs-uebung-template-v0.5/BSUe-Template.xcodeproj/: project.pbxproj
bs-uebung-template-v0.5/BSUe-Template.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bs-uebung-template-v0.5/BSUe-Template.xcodeproj/project.xcworkspace/xcuserdata/mikaauer.xcuserdatad/: UserInterfaceState.xcuserstate
bs-uebung-template-v0.5/BSUe-Template.xcodeproj/xcuserdata/mikaauer.xcuserdatad/xcschemes/: xcschememanagement.plist
bs-uebung-template-v0.5/includes/: BlockDeviceHelper.h  Dmap.h  Fat.h  RootData.h  RootDirectory.h  RootDirectory.hpp  SuperBlock.h  Superblock.h  blockdevice.h  constants.h  dmap.h  fat.cpp  fat.h  macros.h  myfs-info.h  myfs.h  superblock.h  wrap.h
bs-uebung-template-v0.5/src/: Dmap.cpp  Fat.cpp  RootData.cpp  RootDirectory.cpp  blockdevice.cpp  dmap.cpp  fat.cpp  mkfs.myfs.cpp  mount.myfs.c  myfs.cpp  wrap.cpp
bs-uebung-template-v0.5/unittests/: catch.hpp  helper.cpp  main.cpp  test-blockdevice.cpp
